JS Function Integrated - V1
JS Password generator main function integrated

--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
     <h2>Random Password Generator</h2> 
 
     <div class="main-container">
-        <input type="text" placeholder="Password" id="PasswordGenerater" readonly> <br/>
-        <button type="submit">Generate Password</button>
+        <input type="text" placeholder="Password" id="Password" readonly> 
+         <br/> 
+         <button type="submit" onclick="getpassword()">Generate Password</button>
     </div>
 
+
+
     <footer>
-        <p>Designed & DevelopedBy Ravindu Rasanga</p>
+        <p>Designed & Developed By <a href="https://ravindurasanga.web.app">Ravindu Rasanga</a></p>
     </footer>
     
 </body>
