improved some designs - DV3 / FV1.1
Designs Version  = DV
JS Function  Version  = FV

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         Random Password Generator</a></h2> 
 
     <div class="main-container">
-        <input type="text" placeholder="Password" id="Password" readonly> 
-         <br/> 
+        <div class="input-container">
+            <input type="text" placeholder="Password" id="Password" readonly> 
+            <button class="copyBtn"><i class="fas fa-copy"></i></button>
+         </div>
     </div>
     <div class="sub-container">
          <button class="PwGenBtn"type="submit" onclick="getpassword()">Generate Password</button>
-
-         <button class="copyBtn"><i class="fas fa-copy"></i></button>
     </div>
 
 
